mongodb/mongodb-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mongo.cloudistic.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: mongo-express-ingress
#  namespace: default
#spec:
#  rules:
#  - host: mongo.cloudistic.net
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: mongo-express-service
#            port:
#              number: 8081
